<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello_test_activity">Hello test activity!</string>
    <string name="app_name">排球记分</string>
    <string name="match_list">比赛列表</string>
    <string name="import_league_match">导入比赛</string>
    <string name="export_league_match">导出比赛</string>
    <string name="create_league_match">创建比赛</string>
    <string name="league_match_name">比赛名称：</string>
    <string name="determine">确定</string>
    <string name="choose_league_match">选择比赛</string>
    <string name="team_rank">队伍排名</string>
    <string name="team_list">队伍列表</string>
    <string name="import_team">导入队伍</string>
    <string name="export_team">导出队伍</string>
    <string name="create_team">创建队伍</string>
    <string name="team_name">队伍名称</string>
    <string name="group">组别：</string>
    <string name="number">号码</string>
    <string name="team_member_name">队员姓名</string>
    <string name="libero_number">自由人号码 （"L"）</string>
    <string name="captain_name">队长姓名：</string>
    <string name="coach_name">教练姓名：</string>
    <string name="choose_team">选择队伍</string>
    <string name="choose_A_team">选择A队</string>
    <string name="choose_B_team">选择B队</string>
    <string name="begin_game">开始比赛</string>
    <string name="city">城市：</string>
    <string name="place">场馆/场地：</string>
    <string name="stage">阶段：</string>
    <string name="category">类别：</string>
    <string name="competition_system">赛制：</string>
    <string name="next_step">下一步</string>
    <string name="A">A</string>
    <string name="B">B</string>
    <string name="firstTeam">首发队伍：</string>
    <string name="romanNum1">I</string>
    <string name="romanNum2">II</string>
    <string name="romanNum3">III</string>
    <string name="romanNum4">IV</string>
    <string name="romanNum5">V</string>
    <string name="romanNum6">VI</string>
    <string name="service_number">发球号码：</string>
    <string name="set_score">比赛比分：</string>
    <string name="spike_get">扣球得分</string>
    <string name="block_get">拦网得分</string>
    <string name="serve_get">发球得分</string>
    <string name="drop_get">吊球得分</string>
    <string name="other_fail_get">对失得分</string>
    <string name="spike_lose">扣球失分</string>
    <string name="block_lose">拦网失分</string>
    <string name="drop_lose">吊球失分</string>
    <string name="self_lose">自失失分</string>
    <string name="recall">撤回</string>
    <string name="set_end">比赛结束</string>
    <string name="pause">暂停</string>
    <string name="substitution">换人</string>
    <string name="penalty">判罚</string>
    <string name="remark">备注</string>
    <string name="match_result">比赛结果</string>
    <string name="name_A_team">A队名称：</string>
    <string name="name_B_team">B队名称：</string>
    <string name="win_fail">胜负w</string>
    <string name="get_score">得分</string>
    <string name="set_duration">局时间</string>
    <string name="match_duration">比赛用时</string>
    <string name="match_start_time">比赛开始时间</string>
    <string name="match_end_time">比赛结束时间</string>
    <string name="match_total_time">比赛总时间</string>
    <string name="win_team">胜队</string>
    <string name="captain_determine">队长确认</string>
    <string name="judge_determine">裁判员确认</string>
    <string name="recorder_determine">记录员确认</string>
    <string name="ranking_win">获胜队伍名次：</string>
    <string name="ranking_fail">输球队伍名次：</string>
    <string name="match_record_list">比赛记录列表</string>
    <string name="import_match_records">导入比赛记录</string>
    <string name="export_match_records">导出比赛记录</string>
    <string name="pause_team">暂停队伍：</string>
    <string name="end_pause">结束暂停</string>
    <string name="substitution_team">换人队伍：</string>
    <string name="substitution_down_num">换下队员号码：</string>
    <string name="substitution_up_num">换上队员号码：</string>
    <string name="choose_match">选择比赛记录</string>
    <string name="choose_team_type">选择队伍类型：</string>
    
    <string name="start_service">start_service</string>
    <string name="stop_service">stop_service</string>
    <string name="send_broadcast">send_broadcast</string>
    <string name="write_sdcard">write_sdcard</string>
    
</resources>
