<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SetInPlayActivity" >

    <TextView
        android:id="@+id/titleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:text="" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="36dp"
            android:text="@string/service_number" />

        <TextView
            android:id="@+id/serverNumText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginStart="20dp"
            android:layout_toEndOf="@+id/textView3"
            android:text="" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:layout_marginEnd="98dp"
            android:text="@string/set_score" />

        <TextView
            android:id="@+id/scoreText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:layout_marginEnd="45dp" />
    </RelativeLayout>

    <RadioGroup
        android:id="@+id/getScoreGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/spike_get"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/spike_get" />

        <RadioButton
            android:id="@+id/block_get"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/block_get" />

        <RadioButton
            android:id="@+id/serve_get"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/serve_get" />

        <RadioButton
            android:id="@+id/drop_get"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/drop_get" />

        <RadioButton
            android:id="@+id/other_fail_get"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/other_fail_get" />
    </RadioGroup>

    <RadioGroup
        android:id="@+id/loseScoreGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/spike_lose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/spike_lose" />

        <RadioButton
            android:id="@+id/block_lose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/block_lose" />

        <RadioButton
            android:id="@+id/drop_lose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/drop_lose" />

        <RadioButton
            android:id="@+id/self_lose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/self_lose" />
    </RadioGroup>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:onClick="withdraw"
            android:text="@string/recall" />

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:onClick="setEnd"
            android:text="@string/set_end" />

        <Button
            android:id="@+id/button3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_toStartOf="@+id/button2"
            android:onClick="nextPoint"
            android:text="@string/determine" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/button4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:onClick="pause"
            android:text="@string/pause" />

        <Button
            android:id="@+id/button5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginStart="26dp"
            android:layout_toEndOf="@+id/button4"
            android:onClick="substitution"
            android:text="@string/substitution" />

        <Button
            android:id="@+id/button6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginStart="121dp"
            android:layout_toEndOf="@+id/button5"
            android:text="@string/penalty" />

        <Button
            android:id="@+id/button7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:text="@string/remark" />

    </RelativeLayout>

</LinearLayout>