<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >
    
    <Button android:id="@+id/btnStartService" 
        android:layout_width="fill_parent" 
        android:layout_height="wrap_content" 
        android:text="@string/start_service" 
        android:visibility="invisible"
        android:onClick="startService"/> 
    <Button android:id="@+id/btnStopService" 
        android:layout_width="fill_parent" 
        android:layout_height="wrap_content" 
        android:text="@string/stop_service" 
        android:visibility="invisible"
        android:onClick="stopService" />

    <Button
        android:id="@+id/btnSendBroadcast"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/send_broadcast"
        android:visibility="invisible"
        android:onClick="broadcastIntent" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:text="@string/match_list" />

    <ListView
        android:id="@+id/matchListView"
        android:layout_width="match_parent"
        android:layout_height="197dp" >
    </ListView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:weightSum="1" >

        <Button
            android:id="@+id/btnImportLeagueMatch"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:text="@string/import_league_match" />

        <Button
            android:id="@+id/btnExportLeagueMatch"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:text="@string/export_league_match" />
        
    </LinearLayout>

    <Button
        android:id="@+id/btnCreateLeagueMatch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:text="@string/create_league_match" />
 
</LinearLayout>