<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/match_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:text="" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:weightSum="1" >

        <TextView
            android:id="@+id/textView2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.4"
	        android:gravity="center_horizontal"
            android:text="@string/city" />

        <EditText
            android:id="@+id/cityEditText"
            android:inputType="text"
            android:labelFor="@+id/cityEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.6"
            android:ems="10" >

            <requestFocus />
        </EditText>
        
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:weightSum="1" >

        <TextView
            android:id="@+id/textView3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.4"
	        android:gravity="center_horizontal"
            android:text="@string/place" />

        <EditText
            android:id="@+id/placeEditText"
            android:inputType="text"
            android:labelFor="@+id/placeEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.6"
            android:ems="10" >
        </EditText>
        
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:weightSum="1" >

        <TextView
            android:id="@+id/textView4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.4"
	        android:gravity="center_horizontal"
            android:text="@string/stage" />

        <EditText
            android:id="@+id/stageEditText"
            android:inputType="text"
            android:labelFor="@+id/stageEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.6"
            android:ems="10" >
        </EditText>
        
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:weightSum="1" >

        <TextView
            android:id="@+id/textView5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.4"
	        android:gravity="center_horizontal"
       		android:layout_gravity="center_vertical"
            android:text="@string/category" />

        <Spinner
            android:id="@+id/categoryChoose"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.6" />
        
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:weightSum="1" >

        <TextView
            android:id="@+id/textView6"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.4"
	        android:gravity="center_horizontal"
       		android:layout_gravity="center_vertical"
            android:text="@string/competition_system" />

        <Spinner
            android:id="@+id/competitionSystem"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.6" />
        
    </LinearLayout>
    
    <Button
        android:id="@+id/btnDetermine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:onClick="nextStep"
        android:text="@string/next_step" />
 
</LinearLayout>